[package]
name = "pgfs"
version = "0.1.1"
authors = ["paulpr0 <github@pr0.co.uk>"]
edition = "2024"
license = "MIT"
description = "FUSE filesystem backed by a postgres database"
repository = "https://github.com/paulpr0/pgfs"
readme = "README.md"
keywords = ["postgres", "postgresql", "fuse", "filesystem"]
categories= ["database", "filesystem"]

[dependencies]
fuser = "0.16"
postgres = "0.19"
log = "0.4"
libc = "0.2"
time = "0.1.44"
bimap = "0.6"
toml = "0.5.8"
